automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
    "outputs": [],
    "source": [
     "import folium\n",
-    "manhattan_map = folium.Map(location=[40.7589, -73.9851], zoom_start=11)"
+    "manhattan_map = folium.Map(location=[40.7589, -73.9851], zoom_start=11)\"\""
    ]
   },
   {
